# project_pilot_ai

./: .env  .gitattributes  .gitignore  .nginx  .vscodeignore  App.py  Dockerfile  Install.sh  Kubu-hai.js  Lmlm.java  Makefile  Makefile.win  Package.json  Procfile  README.md  Readme.md  UltimateCopilot_AllInOne.ps1  __init__.py  ai_code_review.py  auto_cert.ps1  bash  bash.sh  compile.sh  create-cert.sh  cross-env-shell.js  extension.ts  index.MD  index.html  index.md  index.rst.r  kubu-hai-main.tar  llms-full (5) 2.txt  localhost  project_pilot_ai:preset.json  projectpilotai_web_dashboard.html  pyi-pool.bat  pyproject.toml  requirements-dev.txt  requirements.txt  scripts.js  (+9 more)
.github/scripts/: Install.sh  StepModel.kt  create-cert.sh  generate_files.swift  pr-review.yml
.github/workflows/: Ci.yml  action.yml  deploy-to-pages.yml  deploy.yml  full_CI.yml  github-actions-demo.yml  (+1 more)
Docs/: Function.md  Html.md  Script.js  core.md
Model/: setup.py
Prompt/: preset.json
Server/: client.ts  package-lock.json
Task/: task.json  task001.jsonl
Web/: character.md
ai_core/: code_summary.py  enclov-config.1  enclov-review (1).1  enclov-stop.1  finetune_lora.py  generator.py  security_scan.py
api/: spec.json  tasks.yaml
backend/: api.py  summarize.py
cert-tools/: .gitignore
cli/: watchdog_runner.py
extensions/: WdpTasks.xml  run_cert_dashboard.bat
gui/: deployer.py
pilot_sdk/: __init__.py
project-pilot/: package.json
src/: extension.ts
voice/: whisper_handler.py + tts_playback.py
web-dashboard/: index.html
workflows/: Taskfile.yml  ai_pr_review.yml
(+27 files in other folders)
