[project]
name = "projectpilotai"
version = "1.0.0"
description = "AI-Powered Project Management & Certificate Automation"
authors = ["Kubu Lee <kubulee.kl@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "openai",
    "requests",
    "httpx",
    "python-dotenv",
    "PyGithub",
    "fastapi",
    "uvicorn",
    "cryptography",
    "streamlit"
]

[project.optional-dependencies]
dev = ["flake8", "psutil"]
dashboard = ["streamlit", "cryptography"]

[tool.setuptools]
packages = ["project_pilot_ai", "extensions.cert_dashboard", "extensions.cert_automation"]
